--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 	body, input, select, textarea {
 		color: #fff;
 		font-family: 'Lato', sans-serif;
-		font-size: 15pt;
+		font-size: 14pt;
 		font-weight: 300;
 		letter-spacing: 0.025em;
 		line-height: 1.75em;
@@ -57,6 +57,7 @@
 	p, ul, ol, dl, table, blockquote {
 		margin: 0 0 2em 0;
 		text-align: justify;
+		font-size: 16px;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -736,7 +737,7 @@
 				}
 
 /* Dropotron */
-
+ 
 	.dropotron {
 		background: #fff;
 		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
@@ -890,6 +891,23 @@
 
 	body.index #main {
 		padding-top: 2em;
+	}
+
+	.examples{
+		background-color:rgba(0,0,0,0.2);
+	}
+
+	.examples > header{
+		margin-top: 0.75em;
+	}
+
+	.examples > p{
+		padding:0em 1.75em 1.5em 1.75em;
+	}
+
+	.thumb{
+		width:100%;
+		height:233px;
 	}
 
 /* CTA */
